Add data alignment 16 byte boundary

--- a/simddemo.lpi
+++ b/simddemo.lpi
@@ -72,7 +72,7 @@
   <CompilerOptions>
     <Version Value="11"/>
     <Target>
-      <Filename Value="simddemo"/>
+      <Filename Value="bin/simddemo"/>
     </Target>
     <SearchPaths>
       <IncludeFiles Value="$(ProjOutDir)"/>
