Add implementation for vector arithmethic using SSE 3 and SSE 4.1 instruction

--- a/simddemo.lpi
+++ b/simddemo.lpi
@@ -32,7 +32,7 @@
         <PackageName Value="LCL"/>
       </Item1>
     </RequiredPackages>
-    <Units Count="8">
+    <Units Count="10">
       <Unit0>
         <Filename Value="simddemo.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -41,6 +41,7 @@
         <Filename Value="ufrmmain.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="frmAddVector"/>
+        <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="ufrmMain"/>
       </Unit1>
@@ -72,6 +73,14 @@
         <IsPartOfProject Value="True"/>
         <UnitName Value="availVectorOperation"/>
       </Unit7>
+      <Unit8>
+        <Filename Value="vectors/vectorsse41operation.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit8>
+      <Unit9>
+        <Filename Value="vectors/vectorsse3operation.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit9>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
@@ -84,6 +93,11 @@
       <OtherUnitFiles Value="vectors"/>
       <UnitOutputDirectory Value="lib/$(TargetCPU)-$(TargetOS)"/>
     </SearchPaths>
+    <CodeGeneration>
+      <Optimizations>
+        <OptimizationLevel Value="4"/>
+      </Optimizations>
+    </CodeGeneration>
     <Linking>
       <Options>
         <Win32>
